--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-    - "2.7"
+    - 2.7
 install:
-    - "pip install lxml"
+    - pip install -q lxml
 script:
-    - "python test.py"
+    - python test.py
